[package]
name = "nalgebra-py"
description = "conversions between nalgebra and numpy via pyo3"
version = "0.3.1"
authors = ["Maarten de Vries <maarten@de-vri.es>", "Jacob Trueb <jtrueb@northwestern.edu"]
edition = "2018"
license = "BSD-2-Clause"
repository = "https://github.com/qsib-cbie/nalgebra-numpy"
documentation = "https://docs.rs/nalgebra-py/"

readme = "README.md"
keywords = ["python", "numpy", "nalgebra", "matrix", "conversion"]
categories = ["science"]

[dependencies]
nalgebra = "0.31.1"
numpy = "0.16.2"
pyo3 = "0.16.6"
